--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Movie Finder Page</title>
     <link rel="stylesheet" href="http://bootswatch.com/slate/bootstrap.min.css"> lin
+    <link rel="stylesheet" href="http://bootswatch.com/4/flatly/bootstrap.css" media="screen">
     <link rel="stylesheet" href="css/style.css">
 
     <body>
